# saturn

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  saturn.ino
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml
docs/: index.md
docs/css/: custom.css  termynal.css
docs/js/: custom.js
portals/: facebook_pt-br.html
scripts/: format_ir.sh  format_pronto.py  format_raw.py  generate_mac_file.py
src/: applejuice.h  beacon.h  deauth.h  functions.h  infrared.h  language.h  macprefixes.h  pitches.h  portal.h  processes.h  sd.h  settings.h  sounds.h
